# warp

./: AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release-appimage.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  validation_tests.rs
src-tauri/src/app/: mod.rs
src-tauri/src/events/: mod.rs
src-tauri/src/local_fs/: mod.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/profiles/: mod.rs
src-tauri/src/remote_sftp/: mod.rs
src-tauri/src/scp_compat/: mod.rs
src-tauri/src/session/: mod.rs
src-tauri/src/store/: mod.rs
src-tauri/src/transfer/: mod.rs
src-tauri/src/trust/: mod.rs
src/lib/: mock-data.ts  tauri.ts  types.ts
