[package]
name = "warp"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
keyring = { version = "3.6", features = ["linux-native-async-persistent", "tokio", "crypto-rust"] }
russh = "0.57"
russh-sftp = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh-key = { version = "0.6", features = ["serde"] }
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "fs", "io-util", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
